--- a/flutter_firebase_firestore_first-main/pubspec.yaml
+++ b/flutter_firebase_firestore_first-main/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.16.0
   cloud_firestore: ^4.9.2
   uuid: ^4.1.0
+  firebase_auth: ^4.10.1
 
 dev_dependencies:
   flutter_test:
